testdata/baselines/reference/submodule/conformance/neverIntersectionNotCallable.errors.txt
neverIntersectionNotCallable.ts(2,1): error TS2349: This expression is not callable.
  Type '{ (x: string): number; a: ""; } & { a: number; }' has no call signatures.


==== neverIntersectionNotCallable.ts (1 errors) ====
    declare const f: { (x: string): number, a: "" } & { a: number }
    f()
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type '{ (x: string): number; a: ""; } & { a: number; }' has no call signatures.
    